# jico

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  README_rus.md  env.example
.github/workflows/: build_rpm.yml
packaging/: jico.1  jico.spec
src/: main.rs
tests/: cli.rs
wix/: main.wxs
